tests/pass/test-arith2.mc
int main()
{
  print(1 + 2 * 3 + 4);
  return 0;
}
