tests/fail/fail-return1.mc
int main()
{
  return true; /* Should return int */
}
